--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
   
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
   
   <title>Rayan Kazi | Article preview component</title>
 
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="component">
         <div class="image">
-          <img src="/drawers.jpg" alt="">
+          <img src="drawers.jpg" alt="">
         </div>
         <div class="content">
           <h1 class="l-height d-color">A review article, also called a literature review, is a survey of previously published research on a topic.</h1>
@@ -30,7 +30,7 @@
                  supporting arguments and implications for further research.</p>
           <div class="information">
             <div class="icon">
-              <img src="/avatar-person.png" alt="Picture of a Unknown Person">
+              <img src="avatar-person.png" alt="Picture of a Unknown Person">
             </div>
             <div class="info-name">
               <p class="name">Unknown Person</p>
@@ -38,7 +38,7 @@
             </div>
             <div class="share">
               <a class="share-icon" href="#">
-                <img src="/icon-share.svg" alt="Arrow">
+                <img src="icon-share.svg" alt="Arrow">
               </a>
             </div>
           </div>
@@ -47,13 +47,13 @@
           <h2 class="share-name">SHARE</h2>
           <ul class="logos">
             <li>
-              <a href="#"><img src="/icon-facebook.svg" alt="Facebook Logo"></a>
+              <a href="#"><img src="icon-facebook.svg" alt="Facebook Logo"></a>
             </li>
             <li>
-              <a href="#"><img src="/icon-twitter.svg" alt="Twitter Logo"></a>
+              <a href="#"><img src="icon-twitter.svg" alt="Twitter Logo"></a>
             </li>
             <li>
-              <a href="#"><img src="/icon-pinterest.svg" alt="Pinterest Logo"></a>
+              <a href="#"><img src="icon-pinterest.svg" alt="Pinterest Logo"></a>
             </li>
           </ul>
           <div class="share">
@@ -66,13 +66,13 @@
           <h2 class="share-name">SHARE</h2>
           <ul class="logos">
             <li>
-              <a href="#"><img src="/icon-facebook.svg" alt="Facebook Logo"></a>
+              <a href="#"><img src="icon-facebook.svg" alt="Facebook Logo"></a>
             </li>
             <li>
-              <a href="#"><img src="/icon-twitter.svg" alt="Twitter Logo"></a>
+              <a href="#"><img src="icon-twitter.svg" alt="Twitter Logo"></a>
             </li>
             <li>
-              <a href="#"><img src="/icon-pinterest.svg" alt="Pinterest Logo"></a>
+              <a href="#"><img src="icon-pinterest.svg" alt="Pinterest Logo"></a>
             </li>
           </ul>
         </div>
