--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </ul>
           <div class="share">
             <a class="share-icon" href="#">
-              <img src="/icon-share.svg" alt="Arrow">
+              <img src="icon-share.svg" alt="Arrow">
             </a>
           </div>
         </div>
